# scrivener-assistant

./: .gitignore  .mcpbignore  README.md  manifest.json  package-lock.json  package.json  pyproject.toml
.claude/agents/: brainstorm-agent.md  draft-agent.md  review-agent.md  scene-chronicler.md
.github/workflows/: auto_pr.yml  ci.yml  release.yml  test.yml
docs/: REFERENCE.md  SPEC.md  architecture.md  brief.md  prd.md  user_guide.md  user_journey.md
docs/architecture/: coding-standards.md
docs/qa/: code-quality-followup-2026-01-22.md  code-quality-review-2026-01-22.md
docs/stories/: story-1.1.md  story-1.2.md  story-2.1.md  story-2.2.md  story-3.1.md  story-3.2.md  story-3.3.md  story-4.1.md
src/: server.py
src/scrivener_assistant/: __init__.py  base_manager.py  binder_parser.py  cli.py  config.py  content_parser.py  draft_manager.py  metadata_manager.py  migration_tool.py  path_utils.py  project.py  prompt_manager.py  review_manager.py  rtf_converter.py  scene_registry_manager.py  state_manager.py  summary_manager.py  world_manager.py
tests/: test_batch_analysis.py  test_binder_parser.py  test_config_injection.py  test_content_parser.py  test_integration_binder.py  test_integration_content.py  test_integration_metadata.py  test_integration_native_status.py  test_integration_prompts.py  test_integration_reviews.py  test_integration_scene_registry.py  test_integration_summaries.py  test_lore.py  test_metadata_manager.py  test_project_validation.py  test_review_versioning.py  test_rtf_converter.py  test_scene_registry_manager.py  test_server.py
(+15 files in other folders)
